<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TmrOut</string>
    <string name="detect_devices">Detect DAQ devices</string>
    <string name="connect_device">Connect</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="status_text">&quot;Status: &quot;</string>
    <string name="empty"></string>
    <string name="tmr_text">Channel:</string>
    <string name="frequency_text">Frequency:</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="dutyCycle_text">Duty cycle:</string>
    <string name="pulseCount_text">Pulse count:</string>
    <string name="initialDelay_text">Initial Delay:</string>
    <string name="idleState_text">Idle State:</string>
    <string name="net_detect_text">Detect</string>
    <string name="cancel_text">Cancel</string>
    <string name="ip_addr_text">IP address or host name:</string>
    <string name="port_text">Port:</string>

</resources>